Service-Canary.yaml
kind: Service
apiVersion: v1
metadata:
  name: token-test-canary-service
spec:
  selector:
    app: token-test
    state: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: node-port
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: token-port
