Service-Preview.yaml
kind: Service
apiVersion: v1
metadata:
  name: token-test-preview-service
spec:
  selector:
    app: token-test
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
