Service-Root.yaml
kind: Service
apiVersion: v1
metadata:
  name: token-test-root-service
spec:
  selector:
    app: token-test
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: token-port
