Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: token-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: active.token-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: token-test-active-service
              servicePort: 80
    - host: stable.token-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: token-test-stable-service
              servicePort: 80
    - host: canary.token-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: token-test-canary-service
              servicePort: 8443
    - host: root.token-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: token-test-root-service
              servicePort: 80
